--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+
+<body>
+
+    <!-- header section -->
+    <header class="bg-black text-white">
+        <section>
+            <div class="container-lg text-center py-5">
+                <h1>Select Your Best Five</h1>
+                <p style="max-width: 600px; text-align: center;" class="mx-auto">Amet minim mollit non deserunt ullamco
+                est sit aliqua dolor do amet sint. Velit officia consequat duis
+                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <section class="container-lg my-5">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="images/messi.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Leo Messi</h5>
+                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/messi.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Leo Messi</h5>
+                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/messi.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Leo Messi</h5>
+                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
+    <!-- Bootstrap Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
