--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -23,41 +24,109 @@
         </section>
     </header>
 
-    <main>
-        <section class="container-lg my-5">
-            <div class="row row-cols-1 row-cols-md-4 g-4">
+    <main class="container-lg d-flex my-5">
+        <section>
+            <div class="row row-cols-1 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card">
                         <img src="images/messi.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                           <h5 class="card-title">Leo Messi</h5>
-                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <p class="card-text">36 Goals . 45 Assist</p>
                           <a href="#" class="btn btn-primary px-5">Seclet</a>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="images/messi.png" class="card-img-top" alt="...">
+                        <img src="images/naymer.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Leo Messi</h5>
-                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <h5 class="card-title">Neymar Jr</h5>
+                          <p class="card-text">30 Goals . 35 Assist</p>
                           <a href="#" class="btn btn-primary px-5">Seclet</a>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="images/messi.png" class="card-img-top" alt="...">
+                        <img src="images/mbape.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Leo Messi</h5>
-                          <p class="card-text">36 Goals . 120 Assist</p>
+                          <h5 class="card-title">Kylian Mbappé</h5>
+                          <p class="card-text">32 Goals . 40 Assist</p>
                           <a href="#" class="btn btn-primary px-5">Seclet</a>
                         </div>
                       </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/vítor.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Vítor Machado</h5>
+                          <p class="card-text">26 Goals . 10 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/ramos.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Sergio Ramos</h5>
+                          <p class="card-text">5 Goals . 10 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/Renato.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                          <h5 class="card-title">Renato Sanches</h5>
+                          <p class="card-text">15 Goals . 10 Assist</p>
+                          <a href="#" class="btn btn-primary px-5">Seclet</a>
+                        </div>
+                      </div>
+                </div>
+                
+            </div>
+
+        </section>
+        <!-- list item -->
+        <aside>
+            <div class="bg-grey card p-3 ms-4" style="width: 264px; height: 391px;">
+                <h5 class="text-center">Selected - V</h5>
+                <ul class="list-group list-group-flush list-unstyled">
+                  <li >An item</li>
+                  <li >A second item</li>
+                  <li >A third item</li>
+                </ul>
+              </div>
+            <div class="bg-grey card px-3 py-4 ms-4 mt-4" style="width: 264px; height: 450px;">
+                <h5 class="text-center">Budget</h5>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <p class="mb-0">Per Player:</p>
+                    <input type="text" class="w-50 py-1 px-2">
+                </div>
+                <button class="btn btn-primary mt-3">Calculate</button>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <p class="mb-0">Player Expenses:</p>
+                    <p class="mb-0">$<span>5000</span></p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <p class="mb-0">Manager:</p>
+                    <input type="text" class="w-50 py-1 px-2">
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <p class="mb-0">Coach:</p>
+                    <input type="text" class="w-50 py-1 px-2">
+                </div>
+                <button class="btn btn-primary mt-3">Calculate Total</button>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <p class="mb-0">Total:</p>
+                    <p class="mb-0 text-orange">$<span>11000</span></p>
                 </div>
             </div>
-        </section>
+        </aside>
     </main>
 
 
