--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <div class="card">
                         <img src="images/naymer.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Neymar Jr</h5>
+                          <h5 class="card-title" id="neymar-name">Neymar Jr</h5>
                           <p class="card-text">30 Goals . 35 Assist</p>
-                          <a class="btn btn-primary px-5">Seclet</a>
+                          <button class="btn btn-primary px-5" id="btn-neymar">Select</button>
                         </div>
                       </div>
                 </div>
@@ -58,9 +58,9 @@
                     <div class="card">
                         <img src="images/mbape.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Kylian Mbappé</h5>
+                          <h5 class="card-title" id="mbappe-name">Kylian Mbappé</h5>
                           <p class="card-text">32 Goals . 40 Assist</p>
-                          <a class="btn btn-primary px-5">Seclet</a>
+                          <button class="btn btn-primary px-5" id="btn-mbappe">Select</button>
                         </div>
                       </div>
                 </div>
@@ -68,9 +68,9 @@
                     <div class="card">
                         <img src="images/vítor.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Vítor Machado</h5>
+                          <h5 class="card-title" id="machado-name">Vítor Machado</h5>
                           <p class="card-text">26 Goals . 10 Assist</p>
-                          <a class="btn btn-primary px-5">Seclet</a>
+                          <button class="btn btn-primary px-5" id="bnt-machado">Select</button>
                         </div>
                       </div>
                 </div>
@@ -78,9 +78,9 @@
                     <div class="card">
                         <img src="images/ramos.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Sergio Ramos</h5>
+                          <h5 class="card-title" id="ramos-name">Sergio Ramos</h5>
                           <p class="card-text">5 Goals . 10 Assist</p>
-                          <a class="btn btn-primary px-5">Seclet</a>
+                          <button class="btn btn-primary px-5" id="btn-ramos">Select</button>
                         </div>
                       </div>
                 </div>
@@ -88,9 +88,9 @@
                     <div class="card">
                         <img src="images/Renato.png" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Renato Sanches</h5>
+                          <h5 class="card-title" id="renato-name">Renato Sanches</h5>
                           <p class="card-text">15 Goals . 10 Assist</p>
-                          <a class="btn btn-primary px-5">Seclet</a>
+                          <button class="btn btn-primary px-5" id="btn-renato">Select</button>
                         </div>
                       </div>
                 </div>
