--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                 <h5 class="text-center">Budget</h5>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Per Player:</p>
-                    <input type="text" class="w-50 py-1 px-2">
+                    <input type="text" class="w-50 py-1 px-2" placeholder="Enter Amount" id="perplayer-cost">
                 </div>
-                <button class="btn btn-primary mt-3">Calculate</button>
+                <button class="btn btn-primary mt-3" id="btn-calculate">Calculate</button>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Player Expenses:</p>
-                    <p class="mb-0">$<span>5000</span></p>
+                    <p class="mb-0">$<span id="player-expenses">00</span></p>
                 </div>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Manager:</p>
