--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Manager:</p>
-                    <input type="text" class="w-50 py-1 px-2">
+                    <input type="text" class="w-50 py-1 px-2" id="manager-cost">
                 </div>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Coach:</p>
-                    <input type="text" class="w-50 py-1 px-2">
+                    <input type="text" class="w-50 py-1 px-2" id="coach-cost">
                 </div>
-                <button class="btn btn-primary mt-3">Calculate Total</button>
+                <button class="btn btn-primary mt-3" id="btn-calculateTotal">Calculate Total</button>
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <p class="mb-0">Total:</p>
-                    <p class="mb-0 text-orange">$<span>11000</span></p>
+                    <p class="mb-0 text-orange">$<span id="total-expenses">00</span></p>
                 </div>
             </div>
         </aside>
